--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>opba-protocols</module>
         <module>opba-facade-protocol-api-shared</module>
         <module>last-module-codecoverage</module>
+        <module>smoke-tests</module>
     </modules>
 
     <url>https://github.com/adorsys/open-banking-gateway</url>
