refactored url builder

--- a/fintech-examples/fintech-impl/src/test/resources/application.yml
+++ b/fintech-examples/fintech-impl/src/test/resources/application.yml
@@ -20,9 +20,6 @@ mock:
     listaccounts: true
 
 fintech-ui:
-  schema: http
-  host: localhost
-  port: 4444
-  redirect-url: "{redirectUri}/{redirectCode}"
-  exception-url: excaption-redirect
+  redirect-url: http://localhost:4444/{redirectUri}/{redirectCode}
+  exception-url: http://localhost:4444/excaption-redirect
 
