--- a/fintech-examples/fintech-server/src/main/resources/application.yml
+++ b/fintech-examples/fintech-server/src/main/resources/application.yml
@@ -25,9 +25,5 @@ spring:
     driver-class-name: org.h2.Driver
 
 fintech-ui:
-  schema: http
-  host: localhost
-  port: 4444
-  redirect-url: "{redirectUri}/{redirectCode}"
-  exception-url: excaption-redirect
-
+  redirect-url: http://localhost:4444/{redirectUri}/{redirectCode}
+  exception-url: http://localhost:4444/excaption-redirect
