--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
 
         <!-- Framework libs -->
         <spring-boot.version>2.2.4.RELEASE</spring-boot.version>
+        <commit-id.version>4.0.0</commit-id.version>
         <guava.version>28.1-jre</guava.version>
         <apache.commons-lang3.version>3.9</apache.commons-lang3.version>
         <fasterxml.version>2.10.1</fasterxml.version>
