--- a/.travis.yml
+++ b/.travis.yml
@@ -19,12 +19,6 @@ after_success:
   - bash <(curl -s https://codecov.io/bash)
 
 deploy:
-#  -
-#    skip_cleanup: true
-#    provider: script
-#    script: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.host.url=$SONAR_HOST -Dsonar.login=$SONAR_TOKEN
-#    on:
-#      branch: develop
   - provider: script
     skip_cleanup: true
     script: /bin/bash scripts/deploy_mvn.sh
@@ -52,3 +46,10 @@ deploy:
     script: bash scripts/deploy_javadoc.sh
     on:
       tags: true
+
+  # Validate deployment status
+  - provider: script
+    skip_cleanup: true
+    script: bash scripts/validate_dev_deploy.sh
+    on:
+      branch: develop
