OBG-426 removed cookie service

--- a/fintech-examples/fintech-server/src/main/resources/application.yml
+++ b/fintech-examples/fintech-server/src/main/resources/application.yml
@@ -6,8 +6,13 @@ server:
       maxAge: 300
       httpOnly: false
       path: /
-      sameSite: Lax
+      sameSite: Strict
       # sameSite: Strict|Lax|none
+      # samesite SameSite prevents the browser from sending this cookie along with cross-site requests. Possible values for the flag are lax or strict.
+      # The strict value will prevent the cookie from being sent by the browser to the target site in all cross-site browsing context, even when following a regular link.
+      # The lax value will only send cookies for TOP LEVEL navigation GET requests. This is sufficient for user tracking, but it will prevent many CSRF attacks.
+
+
 
 tpp:
   url: http://localhost:8085
