--- a/fintech-examples/fintech-server/src/main/resources/application.yml
+++ b/fintech-examples/fintech-server/src/main/resources/application.yml
@@ -19,10 +19,11 @@ mock:
 
 spring:
   datasource:
-    url: jdbc:h2:mem:test
-    username: SA
-    password:
-    driver-class-name: org.h2.Driver
+    url: jdbc:postgresql://localhost/open_banking?currentSchema=fintech
+    username: postgres
+    password: docker
+  liquibase:
+    change-log: classpath:master.xml
 
 fintech-ui:
   redirect-url: http://localhost:4444/{redirectUri}/{redirectCode}
