--- a/fintech-examples/fintech-server/pom.xml
+++ b/fintech-examples/fintech-server/pom.xml
@@ -110,7 +110,7 @@
     </dependencies>
 
     <build>
-        <finalName>${artifactId}-${project.version}</finalName>
+        <finalName>${project.artifactId}-${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
