--- a/fintech-examples/fintech-server/src/main/resources/application.yml
+++ b/fintech-examples/fintech-server/src/main/resources/application.yml
@@ -22,9 +22,13 @@ spring:
     url: jdbc:postgresql://localhost/open_banking?currentSchema=fintech
     username: postgres
     password: docker
+    type: com.zaxxer.hikari.HikariDataSource
+    driver-class-name: org.postgresql.Driver
+    hikari:
+      schema: fintech
   liquibase:
     enabled: true
-    change-log: classpath:master.xml
+    change-log: classpath:migration/master.xml
     parameters:
       table-prefix: opb_
   jpa:
