--- a/fintech-examples/fintech-server/src/test/resources/application.yml
+++ b/fintech-examples/fintech-server/src/test/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     password:
     driver-class-name: org.h2.Driver
   liquibase:
-    change-log: classpath:master.xml
+    change-log: classpath:migration/master.xml
 
 fintech-ui:
   redirect-url: http://localhost:4444/{redirectUri}/{redirectCode}
