--- a/fintech-examples/fintech-server/src/test/resources/application.yml
+++ b/fintech-examples/fintech-server/src/test/resources/application.yml
@@ -11,6 +11,8 @@ spring:
     driver-class-name: org.h2.Driver
   liquibase:
     change-log: classpath:migration/master.xml
+    parameters:
+      table-prefix: opb_
 
 fintech-ui:
   redirect-url: http://localhost:4444/{redirectUri}/{redirectCode}
