OBG-297: Init commit

--- a/opba-protocols/xs2a-protocol/src/main/resources/application.yml
+++ b/opba-protocols/xs2a-protocol/src/main/resources/application.yml
@@ -45,3 +45,6 @@ pkcs12:
 
 flowable:
   process-definition-location-prefix: classpath*:/processes/**/
+
+hibernate-validation:
+  invalid-consent-mesage: Ais consent has invalid structure
